--- a/service.html
+++ b/service.html
@@ -161,30 +161,33 @@
 
         <div id="Guidance " class="tabcontent">
             <h3>Guidance and Counselling</h3>
-            <p>Making the decision to study abroad takes guts. It shows your somebody who isn’t afraid to take
-                on new frontiers.We certainly understand the excitement of studying overseas but we also know it can be
+            <p>Making the decision to study abroad takes guts. It shows your somebody who isn’t <br> afraid to take
+                on new frontiers.We certainly understand the excitement of studying <br>overseas but we also know it can
+                be
                 nerve-wracking.
-                At ESS, we’ve been a trusted advisor to parents and students because we provide full detailed
-                pre-departure
+                At ESS, we’ve been a trusted <br>advisor to parents and students because we provide full detailed
+                pre-departure<br>
                 counselling.Unlike
-                other student-recruitment agencies, we can even book your flights in-house.
+                other student-recruitment agencies, we can even book your flights<br> in-house.
 
                 <br> <br> <strong> We’ll help</strong> ensure every detail is taken care of for
-                your arrival in your new country. If you require it, we’ll arrange for you to be picked up from the
+                your arrival in your new country. If you<br> require it, we’ll arrange for you to be picked up from the
                 airport
                 and check in with you
-                to make sure you arrive safely at your hotel.Our job is to set you and your family’s mind at ease by
+                to <br>make sure you arrive safely at your hotel. Our job is to set you and your family’s mind at<br>
+                ease
+                by
                 providing you accurate, detailed
-                information about what you can expect upon arrival.We are world-leaders in student service and the
+                information about what you can expect upon <br>arrival.We are world-leaders in student service and the
                 trusted
-                partner of many top education
+                partner of many top <br>education
                 providers because of the extra care we take of our students.
 
-                <br><br>Our pre-departure counselling will also help you address foreign exchange and travel
-                arrangements. Any questions you have about life and study in Australia can be answered before you
+                <br><br>Our pre-departure counselling will also help you address foreign exchange and travel<br>
+                arrangements. Any questions you have about life and study in Australia can be answered<br> before you
                 arrive.
                 And we have a wealth of information specially
-                tailored for international students.
+                tailored for international <br>students.
             </p>
 
             <img src="assets/images/guidance1.jpg" id="price-img">
@@ -202,25 +205,16 @@
 
         <div id="Service Price" class="tabcontent">
             <h3>Service Price</h3>
-            <p>Before you can leave the country, you’re going to need to make sure you have an International Student
-                Visa.
-                <strong> Don’t worry,</strong> this is something ESS can arrange on your behalf from start to finish. So
-                your application has been approved,
-                you’ve got your offer and you’re ready to go overseas. <br> <br>But wait! Before you can leave the
-                country,
-                you’re going to need to
-                make sure you have an International Student Visa. Don’t worry, this is something ESS can arrange on your
-                behalf from start to finish.
-                Not only do we provide up-to-date advice regarding the visa requirements of your destination country but
-                we
-                can process the visas in-house.<br><br>
-                This means you don’t need to go outside ESS to complete this part of the process. And because we know
-                the
-                details of your application already, we can help get you quicker outcomes.
+            <p> European Study Solution has a payable service packages. You can choose from <strong> Basic,<br> Standard
+                    and
+                    Premium</strong>.
+                Every package can offer different services, including application<br> filling, search of accommodation,
+                Visa
+                application and etc. <strong>First consultation is for free!</strong>
             <p>
 
-                <img src="assets/images/price.png" id="price-img2">
-            <h5>Do you have more questions related to Service Price?</h5>
+                <img src="assets/images/prices.png" id="price-img2">
+            <h5 id="services-h5">Do you have more questions related to Service Price?</h5>
             <div class="contact-button">
                 <button class="buttonStyle1"><i class="fas fa-phone-alt"
                         style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
@@ -230,22 +224,27 @@
 
         <div id="Visa" class="tabcontent">
             <h3>Visa Application</h3>
-            <p>Before you can leave the country, you’re going to need to make sure you have an International Student
+            <p>Before you can leave the country, you’re going to need to make sure you have <br>an International Student
                 Visa.
-                Don’t worry, this is something ESS can arrange on your behalf from start to finish.<br><br>
+                Don’t worry, this is something ESS can arrange <br>on your behalf from start to finish.<br><br>
 
-                Great! So your application has been approved, you’ve got your offer and you’re ready to go overseas. But
-                wait! Before you can leave the country, you’re going to need to make sure you have an International
+                Great! So your application has been approved, you’ve got your offer and you’re <br>ready to go overseas.
+                But
+                wait! Before you can leave the country, you’re going to<br> need to make sure you have an
+                International
                 Student
                 Visa.
-                Don’t worry, this is something ESS can arrange on your behalf from start to finish. Not only do we
+                Don’t worry, this is <br>something ESS can arrange on your behalf from start to finish. <br><br>We not
+                only
                 provide
-                up-to-date advice regarding the visa requirements of your destination country but we can process the
+                up-to-date advice regarding the visa requirements of your <br>destination country but we can process the
                 visas
                 in-house.
-                This means you don’t need to go outside ESS to complete this part of the process. And because we know
+                This means you don’t<br> need to go outside ESS to complete this part of the process. And because we
+                know<br>
                 the
-                details of your application already, we can help get you quicker outcomes.</p>
+                details of your application already, we can help get you quicker outcomes.
+            </p>
             <img src="assets/images/visa-application.jpg" id="price-img">
 
             <h5>Do you have more questions related to Visa Application?</h5>
@@ -258,20 +257,25 @@
 
         <div id="Application" class="tabcontent">
             <h3>Filling out the Application</h3>
-            <p>Wishing for an offer from the University of your dreams? Or just need advice on course requirements?
-                At Studyco we can help you kick-start your journey to study abroad. We’ll be right there with you from
-                application to enrolment, making sure you get to where you need to go.
-                Representing hundreds of top Universities worldwide, we'll take on all the heavy lifting in your
-                application
-                process. Filling in forms, chasing documents and helping you overcome any bumps in the road along the
+            <p>Wishing for an offer from the University of your dreams? Or just need advice<br> on course requirements?
+                At ESS we can help you kick-start your journey <br>to study abroad. We’ll be right there with you
+                from
+                application to enrolment,<br> making sure you get to where you need to go.
+                Representing hundreds of top <br>Universities worldwide, we'll take on all the heavy lifting in your
+                application<br>
+                process. <br><br>Filling in forms, chasing documents and helping you overcome any <br>bumps in the road
+                along
+                the
                 way.
-                Our job is to maximise your chances of getting the best possible education.
+                Our job is to maximise your chances of <br>getting the best possible education.
                 <br><br>
 
                 How to Apply, Step-By-Step
-                The application process can be daunting for any student. Especially when studying abroad. That’s why at
-                Studyco we make the process as streamlined as possible.
-                Simply click here for a step-by-step guide on How to Apply or click here to speak to a counsellor today.
+                The application process can be daunting for <br>any student. Especially when studying abroad. That’s why
+                at
+                ESS we make<br> the process as streamlined as possible.
+                Simply click here for a step-by-step<br> guide on How to Apply or click here to speak to a counsellor
+                today.
             </p>
             <img src="assets/images/application.jpg" id="price-img">
             <h5>Do you have more questions related to Filling out Application?</h5>
@@ -283,24 +287,26 @@
 
         <div id="Communication" class="tabcontent">
             <h3>Communication with university </h3>
-            <p>Study Group works with a large network of agents that are carefully chosen to represent our collaborating
-                universities to students all around the world. Together we share a vision for creating the best outcomes
+            <p>ESS works with a big network of agents that are carefully chosen to represent our <br>collaborating
+                universities to students all around the world. Together we share a <br>vision for creating the best
+                outcomes
                 for
-                our students and the universities we work with.<br><br>
+                our students and the universities we work <br>with.<br><br>
 
-                Study Group works with a large network of agents that are carefully chosen to represent our
-                collaborating
-                universities to students all around the world. Together we share a vision for creating the best outcomes
-                for
-                our students and the universities we work with. We understand that our agents play a big part in a
+                We understand that our agents play a big
+                part in
+                a
                 student’s
-                decision-making and application process, so we provide all of the tools and resources needed to help
+                decision-making and <br>application process, so we provide all of the tools and resources needed to
+                help<br>
                 students make the right choice about their education.<br><br>
 
-                We are ensure fully communication with universities, especially during Covid-19 situation, to keep you
-                updated about different deadlines, updates, fees, with applications and new opportunities to be enrolled
+                We are ensure fully communication with universities, especially during Covid-19 <br>situation, to keep
+                you
+                updated about different deadlines, updates, fees, with <br>applications and new opportunities to be
+                enrolled
                 in
-                the different university activities, sports teams. </p>
+                the different university activities,<br> sports teams. </p>
             <img src="assets/images/communication.jpg" id="price-img">
             <h5>Do you have more questions related to Universities?</h5>
 
@@ -312,29 +318,17 @@
 
         <div id="Meetings" class="tabcontent">
             <h3>Personal Meetings</h3>
-            <p>Making the decision to study abroad takes guts. It shows your somebody who isn’t afraid to take on new
-                frontiers.
-
-                We certainly understand the excitement of studying overseas but we also know it can be nerve-wracking.
-                At Studyco, we’ve been a trusted advisor to parents and students because we provide full detailed
-                pre-departure counselling.
-                Unlike other student-recruitment agencies, we can even book your flights in-house.<br><br>
-
-                We’ll help ensure every detail is taken care of for your arrival in your new country. If you require it,
-                we’ll arrange for you to be picked up from the airport and check in with you to make sure you arrive
-                safely
-                at your hotel.
-
-                Our job is to set you and your family’s mind at ease by providing you accurate, detailed information
-                about
-                what you can expect upon arrival.<br><br>
-                We are world-leaders in student service and the trusted partner of many top education providers because
-                of
-                the extra care we take of our students.
-                Our pre-departure counselling will also help you address foreign exchange and travel arrangements. Any
-                questions you have about life and study in Australia can be answered before you arrive. And we have a
-                wealth
-                of information specially tailored for international students.</p>
+            <p>
+                Do you want to find out about studying for <strong>a degree in France </strong>on the basis of your<br>
+                foreign
+                qualification? To hear about the rules for <strong>admission</strong> to undergraduate <br>programmes
+                and to
+                Master's and
+                adult
+                higher education programmes? Or are you not <br>sure about your program choice, and would like to get
+                <strong> personal
+                    traits test?</strong> Then<br> Personal Meetings with our agency crew its just for you!
+            </p>
             <img src="assets/images/meetings.jpg" id="price-img">
             <h5>Do you have more questions related to Individual Meetings?</h5>
 
@@ -346,20 +340,22 @@
 
         <div id="Accomodation" class="tabcontent">
             <h3>Search of Accommodation</h3>
-            <p>Choosing the right place to stay in your new country can be daunting. That’s why it helps to have the
+            <p>Choosing the right place to stay in your new country can be daunting. That’s why<br> it helps to have the
                 best
-                local knowledge. At ESS we place thousands of students annually in accommodation and we know where
+                local knowledge. At ESS we place thousands of students <br>annually in accommodation and we know where
                 students
                 feel safest and happiest.<br><br>
 
-                Our extensive selection of accommodation partners means we can help you browse for the right choice
+                Our extensive selection of accommodation partners means we can help you browse<br> for the right choice
                 based on
-                your needs. Every student has different preferences, some choose to stay in groups, others like to be
+                your needs. Every student has different preferences, <br>some choose to stay in groups, others like to
+                be
                 alone.
-                Whatever the request we can make sure you feel safe in knowing the accommodation provider you’ve chosen
+                Whatever the request we can <br>make sure you feel safe in knowing the accommodation provider you’ve
+                chosen
                 has
-                a quality track-record.
-                Students in France have several different accommodation options available to them. ESS can help you
+                a <br>quality track-record.
+                Students in France have several different accommodation options<br> available to them. ESS can help you
                 find:<br><br>
 
                 1. Homestay arrangements<br><br>
