--- a/service.html
+++ b/service.html
@@ -329,7 +329,7 @@
                 <strong> personal
                     traits test?</strong> Then<br> Personal Meetings with our agency crew its just for you!
             </p>
-            <img src="assets/images/meetings.jpg" id="price-img">
+            <img src="assets/images/meetings.jpg" id="price-img4">
             <h5>Do you have more questions related to Individual Meetings?</h5>
 
             <div class="contact-button">
