--- a/universities.html
+++ b/universities.html
@@ -175,7 +175,7 @@
             <div class="admissiontext">
                 <h3>Apply to  Grenoble Ecole de Management</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <button class="programbtn">Read about admission</button>
+                <button class="programbtn">Read about university</button>
             </div>
 
             <div class="countrytext">
@@ -324,7 +324,7 @@
             <div class="admissiontext">
                 <h3>Apply to  Grenoble Ecole de Management</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <button class="programbtn">Read about admission</button>
+                <button class="programbtn">Read about university</button>
             </div>
 
             <div class="countrytext">
@@ -473,7 +473,7 @@
             <div class="admissiontext">
                 <h3>Apply to  Grenoble Ecole de Management</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <button class="programbtn">Read about admission</button>
+                <button class="programbtn">Read about university</button>
             </div>
 
             <div class="countrytext">
@@ -622,7 +622,7 @@
             <div class="admissiontext">
                 <h3>Apply to  Grenoble Ecole de Management</h3>
                 <p>Read about admission requirements, the admission process, tuition, scholarships or enrolment at Grenoble Ecole de Management as part of an exchange program. Please get in touch with us if you have questions, and we can give you advice on an individual basis.</p>
-                <button class="programbtn">Read about admission</button>
+                <button class="programbtn">Read about university</button>
             </div>
 
             <div class="countrytext">
@@ -727,7 +727,7 @@
             <div class="doctor">
 
                 <button class="panelbutton">
-                    <h3>MasterPrograms</h3>
+                    <h3>Doctoral Programs</h3>
                     <i class="fas fa-chevron-down"></i>
                 </button>
 
@@ -744,7 +744,7 @@
             <div class="master">
 
                 <button class="panelbutton">
-                    <h3>Doctoral Programs</h3>
+                    <h3>MSc Programs</h3>
                     <i class="fas fa-chevron-down"></i>
                 </button>
 
