fully responsive service page

--- a/service.html
+++ b/service.html
@@ -90,33 +90,33 @@
 
     <div class="service-tab">
         <div class="tab">
-            <button class="tablinks" onclick="openCity(event, 'About-Company')" id="defaultOpen" id="left-div">About the
+            <button class="tablinks" onclick="openCity(event, 'About-Company')" id="defaultOpen">About the
                 Company</button>
             <i class="fas fa-chevron-right"></i>
 
             <hr>
-            <button class="tablinks active" id="left-div" onclick="openCity(event, 'Guidance ')">Guidance and
+            <button class="tablinks active" onclick="openCity(event, 'Guidance ')">Guidance and
                 Counselling</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" id="left-div" onclick="openCity(event, 'Service Price')">Service Price</button>
+            <button class="tablinks" onclick="openCity(event, 'Service Price')">Service Price</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" id="left-div" onclick="openCity(event, 'Visa')">Visa Application</button>
+            <button class="tablinks" onclick="openCity(event, 'Visa')">Visa Application</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" id="right-div" onclick="openCity(event, 'Application')">Filling out the
+            <button class="tablinks" onclick="openCity(event, 'Application')">Filling out the
                 Application</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" id="right-div" onclick="openCity(event, 'Communication')">Communication with
+            <button class="tablinks" onclick="openCity(event, 'Communication')">Communication with
                 university </button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" id="right-div" onclick="openCity(event, 'Meetings')">Personal Meetings</button>
+            <button class="tablinks" onclick="openCity(event, 'Meetings')">Personal Meetings</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
-            <button class="tablinks" id="right-div" onclick="openCity(event, 'Accomodation')">Search of
+            <button class="tablinks" onclick="openCity(event, 'Accomodation')">Search of
                 Accommodation</button>
             <i class="fas fa-chevron-right"></i>
             <hr>
@@ -127,32 +127,47 @@
 
         <div id="About-Company" class="tabcontent">
             <h3>About the Company</h3>
-            <p><strong>European Study Solution</strong>- ESS, is a newly start up organization registered in
-                Ukraine,<br>
-                whose purpose is to help American students with the application process and
-                preparation<br> for life
-                abroad.
-                ESS would like to provide a payable service for Americans to help with <br><strong>application
-                    submission to
-                    European
-                    educational programs</strong>. At the moment we are callobarting<br> with the five major France
-                Universities,
-                which Diploma are recognized worldwide.
-                <br><br>Our main service feature is a unique approach to their
-                client, where the
-                main
-                focus would <br>lay on helping to find professional orientation, accompaniment with all the
-                documentary
-                work,
-                preparation for life abroad, etc.
-            </p>
-            <img src="assets/images/france-service.png" id="price-img3">
-            <h5>Do you have more questions about European Study Solution?</h5>
 
-            <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px; font-size: 18px;"></i>Contact
-                    Us</button></a></li>
+
+            <div class="responsive-content">
+                <p><strong>European Study Solution</strong>- ESS, is a newly start up organization registered in
+                    Ukraine,<br>
+                    whose purpose is to help American students with the application process and
+                    preparation<br> for life
+                    abroad.
+                    ESS would like to provide a payable service for Americans to help with <br><strong>application
+                        submission to
+                        European
+                        educational programs</strong>. At the moment we are callobarting<br> with the five major France
+                    Universities,
+                    which Diploma are recognized worldwide.
+                    <br><br>Our main service feature is a unique approach to their
+                    client, where the
+                    main
+                    focus would <br>lay on helping to find professional orientation, accompaniment with all the
+                    documentary
+                    work,
+                    preparation for life abroad, etc.
+                </p>
+
+            </div>
+
+            <div class="responsive-img">
+                <img src="assets/images/france-service.png" id="price-img3">
+            </div>
+
+
+
+            <div class="responsive-h5-button">
+
+                <h5>Do you have more questions about European Study Solution?</h5>
+
+                <div class="contact-button">
+                    <button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px; font-size: 18px;"></i>Contact
+                        Us</button></a></li>
+                </div>
+
             </div>
 
 
@@ -184,10 +199,7 @@
                 providers because of the extra care we take of our students.
 
                 <br><br>Our pre-departure counselling will also help you address foreign exchange and travel<br>
-                arrangements. Any questions you have about life and study in Australia can be answered<br> before you
-                arrive.
-                And we have a wealth of information specially
-                tailored for international <br>students.
+                arrangements.
             </p>
 
             <img src="assets/images/guidance1.jpg" id="price-img">
@@ -325,7 +337,7 @@
                 and to
                 Master's and
                 adult
-                higher education programmes? Or are you not <br>sure about your program choice, and would like to get
+                higher education programmes? Or are you <br>not sure about your program choice, and would like to get
                 <strong> personal
                     traits test?</strong> Then<br> Personal Meetings with our agency crew its just for you!
             </p>
