--- a/service.html
+++ b/service.html
@@ -128,48 +128,35 @@
         <div id="About-Company" class="tabcontent">
             <h3>About the Company</h3>
 
+            <p><strong>European Study Solution</strong>- ESS, is a newly start up organization registered in
+                Ukraine,<br>
+                whose purpose is to help American students with the application process and
+                preparation<br> for life
+                abroad.
+                ESS would like to provide a payable service for Americans to help with <br><strong>application
+                    submission to
+                    European
+                    educational programs</strong>. At the moment we are callobarting<br> with the five major France
+                Universities,
+                which Diploma are recognized worldwide.
+                <br><br>Our main service feature is a unique approach to their
+                client, where the
+                main
+                focus would <br>lay on helping to find professional orientation, accompaniment with all the
+                documentary
+                work,
+                preparation for life abroad, etc.
+            </p>
 
-            <div class="responsive-content">
-                <p><strong>European Study Solution</strong>- ESS, is a newly start up organization registered in
-                    Ukraine,<br>
-                    whose purpose is to help American students with the application process and
-                    preparation<br> for life
-                    abroad.
-                    ESS would like to provide a payable service for Americans to help with <br><strong>application
-                        submission to
-                        European
-                        educational programs</strong>. At the moment we are callobarting<br> with the five major France
-                    Universities,
-                    which Diploma are recognized worldwide.
-                    <br><br>Our main service feature is a unique approach to their
-                    client, where the
-                    main
-                    focus would <br>lay on helping to find professional orientation, accompaniment with all the
-                    documentary
-                    work,
-                    preparation for life abroad, etc.
-                </p>
 
+            <img src="assets/images/france-service.png" id="price-img3">
+
+            <h5>Do you have more questions about European Study Solution?</h5>
+
+            <div class="contact-button">
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
-
-            <div class="responsive-img">
-                <img src="assets/images/france-service.png" id="price-img3">
-            </div>
-
-
-
-            <div class="responsive-h5-button">
-
-                <h5>Do you have more questions about European Study Solution?</h5>
-
-                <div class="contact-button">
-                    <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                            style="margin-top: 1px; margin-left:-3px; font-size: 18px;"></i>Contact
-                        Us</button></a></li>
-                </div>
-
-            </div>
-
 
 
         </div>
@@ -207,9 +194,8 @@
             <h5>Do you have more questions related to Guidance?</h5>
 
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px; font-size: 18px;"></i>Contact
-                    Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
 
         </div>
@@ -228,8 +214,8 @@
                 <img src="assets/images/prices.png" id="price-img2">
             <h5 id="services-h5">Do you have more questions related to Service Price?</h5>
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
 
         </div>
@@ -262,8 +248,8 @@
             <h5>Do you have more questions related to Visa Application?</h5>
 
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
         </div>
 
@@ -292,8 +278,8 @@
             <img src="assets/images/application.jpg" id="price-img">
             <h5>Do you have more questions related to Filling out Application?</h5>
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
         </div>
 
@@ -323,8 +309,8 @@
             <h5>Do you have more questions related to Universities?</h5>
 
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
         </div>
 
@@ -345,8 +331,8 @@
             <h5>Do you have more questions related to Individual Meetings?</h5>
 
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
         </div>
 
@@ -377,11 +363,14 @@
 
             </p>
             <img src="assets/images/accomodation.jpg" id="price-img">
+
             <h5>Do you have more questions related to Accomodation?</h5>
             <div class="contact-button">
-                <button class="buttonStyle1"><i class="fas fa-phone-alt"
-                        style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a></li>
+                <a href="Contact-us.html"><button class="buttonStyle1"><i class="fas fa-phone-alt"
+                            style="margin-top: 1px; margin-left:-3px;font-size: 18px;"></i>Contact Us</button></a>
             </div>
+
+
         </div>
 
         <div class="main-picture">
