--- a/service.html
+++ b/service.html
@@ -91,7 +91,7 @@
     <div class="service-tab">
         <div class="tab">
             <button class="tablinks" onclick="openCity(event, 'About-Company')" id="defaultOpen">About the
-                Company</button>
+                Study Agency</button>
             <i class="fas fa-chevron-right"></i>
 
             <hr>
@@ -126,7 +126,7 @@
 
 
         <div id="About-Company" class="tabcontent">
-            <h3>About the Company</h3>
+            <h3>About the Study Agency</h3>
 
             <p><strong>European Study Solution</strong>- ESS, is a newly start up organization registered in
                 Ukraine,<br>
