--- a/service.html
+++ b/service.html
@@ -222,9 +222,7 @@
 
         <div id="Visa" class="tabcontent">
             <h3>Visa Application</h3>
-            <p>Before you can leave the country, you’re going to need to make sure you have <br>an International Student
-                Visa.
-                Don’t worry, this is something ESS can arrange <br>on your behalf from start to finish.<br><br>
+            <p>
 
                 Great! So your application has been approved, you’ve got your offer and you’re <br>ready to go overseas.
                 But
@@ -232,7 +230,8 @@
                 International
                 Student
                 Visa.
-                Don’t worry, this is <br>something ESS can arrange on your behalf from start to finish. <br><br>We not
+                <strong>Don’t worry</strong>, this is <br>something ESS can arrange on your behalf from start to finish.
+                <br><br>We not
                 only
                 provide
                 up-to-date advice regarding the visa requirements of your <br>destination country but we can process the
@@ -272,8 +271,9 @@
                 The application process can be daunting for <br>any student. Especially when studying abroad. That’s why
                 at
                 ESS we make<br> the process as streamlined as possible.
-                Simply click here for a step-by-step<br> guide on How to Apply or click here to speak to a counsellor
-                today.
+                <strong>Simply send an application and apply<br> for a counsellor meeting, to get to know a step-by-step
+                    guide
+                    today.</strong>
             </p>
             <img src="assets/images/application.jpg" id="price-img">
             <h5>Do you have more questions related to Filling out Application?</h5>
@@ -299,12 +299,14 @@
                 help<br>
                 students make the right choice about their education.<br><br>
 
-                We are ensure fully communication with universities, especially during Covid-19 <br>situation, to keep
+                <strong> We are ensure fully communication with universities,</strong> especially during Covid-19
+                <br>situation, to keep
                 you
                 updated about different deadlines, updates, fees, with <br>applications and new opportunities to be
                 enrolled
                 in
-                the different university activities,<br> sports teams. </p>
+                the different university activities,<br> sports teams.
+            </p>
             <img src="assets/images/communication.jpg" id="price-img">
             <h5>Do you have more questions related to Universities?</h5>
 
@@ -356,10 +358,10 @@
                 Students in France have several different accommodation options<br> available to them. ESS can help you
                 find:<br><br>
 
-                1. Homestay arrangements<br><br>
-                2. Hotel accommodation until you find permanent housing<br><br>
-                3. Temporary housing with international student groups<br><br>
-                4. On-campus housing in halls of residence or small apartments<br><br>
+                <strong> 1. Homestay arrangements<br><br></strong>
+                <strong> 2. Hotel accommodation until you find permanent housing<br><br></strong>
+                <strong> 3. Temporary housing with international student groups<br><br></strong>
+                <strong> 4. On-campus housing in halls of residence or small apartments<br><br></strong>
 
             </p>
             <img src="assets/images/accomodation.jpg" id="price-img">
